# Worldbuilding-Wiki

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  StopWorldbuildingWiki.cmd  WorldbuildingWiki.cmd  pyproject.toml  worldbuilding-wiki.spec
.github/workflows/: build-release.yml
docs/: architecture.md  data-model.md  development.md  mvp-plan.md  platform-design.md  portability.md  product-design.md  release-checklist.md  user-guide.md
docs/decisions/: 0001-local-first-markdown.md  0002-separate-app-and-portable-vault.md
packaging/: README.txt
scripts/: build_release.py  generate_sample_map.py  verify_release.py
src/worldbuilding_wiki/: __init__.py  __main__.py  ai.py  cli.py  errors.py  index.py  paths.py  rendering.py  resources.py  sample.py  service.py  store.py  transfer.py  web.py
src/worldbuilding_wiki/static/: app.css  app.js  index.html
tests/: conftest.py  test_cli.py  test_store_and_index.py  test_transfer.py  test_web.py
