[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldbuilding-wiki"
version = "0.2.0"
description = "Local-first personal worldbuilding wiki"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE.txt"]
authors = [{name = "fenglingshuishan"}]
dependencies = [
  "anyio>=4.4,<4.12",
  "fastapi>=0.115,<0.120",
  "markdown-it-py>=3,<5",
  "PyYAML>=6,<7",
  "uvicorn>=0.29,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "httpx>=0.27,<1",
  "pyinstaller>=6.6,<7",
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
worldbuilding-wiki = "worldbuilding_wiki.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
worldbuilding_wiki = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
